--- a/Outbox/Идеи.md
+++ b/Outbox/Идеи.md
@@ -1,9 +1,5 @@
-[x] Бином Ньютона
 [ ] Теорема синусов
 [ ] Теорема косинусов
-[x] Сигма
-[x] Индукция
-[x] Моя формула для нахождения числа ниже рядом в треугольнике паскаля
 [ ] Что такое искусство(хидден)
-[x] Множества
-[x] Проекции
+[ ] Английский 2 темы
+[ ] Node js
