Refactor notes, add math notes and Node js notes

--- a/Inbox/Brain/СДВ(Г) 2021-10-14.md
+++ b/Inbox/Brain/СДВ(Г) 2021-10-14.md
@@ -11,7 +11,7 @@ aliases:
 - `Type:` [[+]]
 - `Tags:` 
 - `URL:` https://www.youtube.com/watch?v=qUBOV1Fkp1k
-- `Channel/Host:` Scammers
+- `Channel/Host:` [[Scammers]]
 - `Reference:` 
 - `Publish Date:` [[2021-09-30]]
 - `Reviewed Date:` [[2021-10-14]]
