--- a/Inbox/Helth/Бактериальные 2021-10-13.md
+++ b/Inbox/Helth/Бактериальные 2021-10-13.md
@@ -2,23 +2,23 @@
 type: paper
 tags: 📥️/📜️ 💊
 aliases:
-  - Боктериальные заболевания
+  - Бактериальные заболевания
 ---
 
 
 
-# Title: **[[Бактериальные 2021-10-13 2021-10-14]]**
+# Title: **[[Бактериальные 2021-10-13]]**
 
 
 ## Metadata:
 
 - `Type:` [[&]]
-- `Links:` [[Температура 2021-10-13 2021-10-13|Температура]]
+- `Links:` [[Температура 2021-10-13|Температура]]
 - `Author:` 
 	- `Notable Authors:` 
-- `Keywords:` Бактерия, заболевание, антибоктериальные
-- `Specific Subject:` Бактериальное заболевание
-- `General Subject:` Медецина
+- `Keywords:` [[Бактерия]], [[Заболевание]], [[Антибоктериальные]]
+- `Specific Subject:` [[Бактериальное заболевание]]
+- `General Subject:` [[Медецина]]
 - `Reviewed Date:` [[2021-10-13]]
 
 
