--- a/Inbox/Helth/Вирусные 2021-10-13.md
+++ b/Inbox/Helth/Вирусные 2021-10-13.md
@@ -6,19 +6,18 @@ aliases:
 ---
 
 
-
 # Title: **[[Вирусные 2021-10-13]]**
 
 
 ## Metadata:
 
 - `Type:` [[&]]
-- `Links:` [[Температура 2021-10-13 2021-10-13|Температура]]
+- `Links:` [[Температура 2021-10-13|Температура]]
 - `Author:` 
 	- `Notable Authors:` 
-- `Keywords:` Заболевания, вирус, противовирусные
-- `Specific Subject:` Вирусные заболевания
-- `General Subject:` Медицина
+- `Keywords:` [[Заболевания]], [[Вирус]], [[Противовирусные]]
+- `Specific Subject:` [[Вирусные заболевания]]
+- `General Subject:` [[Медицина]]
 - `Reviewed Date:` [[2021-10-13]]
 
 
