--- a/Inbox/Helth/Заболел 2021-10-13.md
+++ b/Inbox/Helth/Заболел 2021-10-13.md
@@ -9,12 +9,12 @@ aliases:
 
 # Title: **[[Заболел 2021-10-13]]**
 - `Type:` [[&]]
-- `Links:` [[Температура 2021-10-13 2021-10-13|Температура]], [[Вирусные 2021-10-13]], [[]]
+- `Links:` [[Температура 2021-10-13|Температура]], [[Вирусные 2021-10-13|Вирусные заболевания]], [[Бактериальные 2021-10-13|Бактериальные заболевания]]
 - `Reviewed Date:` [[2021-10-13]]
 
 Что делать:
-1) Если есть [[Температура 2021-10-13 2021-10-13|температура]], сбить её.
-2) Определяем причну заболевания: [[Вирусные 2021-10-13|вирус]], [[Бактериальные 2021-10-13 2021-10-14|бактерия]].
+1) Если есть [[Температура 2021-10-13|температура]], сбить её.
+2) Определяем причну заболевания: [[Вирусные 2021-10-13|вирус]], [[Бактериальные 2021-10-13|бактерия]].
 3) Лечим.
 
 Что делать всегда:
