--- a/Inbox/Helth/Температура 2021-10-13.md
+++ b/Inbox/Helth/Температура 2021-10-13.md
@@ -7,7 +7,7 @@ aliases:
 
 
 
-# Title: **[[Температура 2021-10-13 2021-10-13]]**
+# Title: **[[Температура 2021-10-13]]**
 
 
 ## Metadata:
@@ -16,9 +16,9 @@ aliases:
 - `Links:`
 - `Author:` 
 	- `Notable Authors:` 
-- `Keywords:`  Температура, жарапонижающие
-- `Specific Subject:` Инфекция
-- `General Subject:` Медецина
+- `Keywords:`  [[Температура]], [[Жарапонижающие]]
+- `Specific Subject:` [[Инфекция]]
+- `General Subject:` [[Медецина]]
 - `Reviewed Date:` [[2021-10-13]]
 
 
