--- a/Inbox/Programming/Node js/Npx 2021-10-16.md
+++ b/Inbox/Programming/Node js/Npx 2021-10-16.md
@@ -16,9 +16,9 @@ aliases:
 - `Links:` [[Версии 2021-10-16]]
 - `Author:` ф
 	- `Notable Authors:` 
-- `Keywords:` Запуск пакетов, node js, веб разработка, отсутствие установки
-- `Specific Subject:` Утилиты
-- `General Subject:` Node js
+- `Keywords:` [[Запуск пакетов]], [[Node js 2021-10-18]], [[Веб разработка]], [[Отсутствие установки]]
+- `Specific Subject:` [[Утилиты]]
+- `General Subject:` [[Node js 2021-10-18]]
 - `Reviewed Date:` [[2021-10-16]]
 
 
