--- a/Inbox/School/Math/Задача отношения треугольника паскаля и сочетаниями 2021-10-10.md
+++ b/Inbox/School/Math/Задача отношения треугольника паскаля и сочетаниями 2021-10-10.md
@@ -16,9 +16,9 @@ aliases:
 - `Links:` [[Сочетания 2021-10-10|Сочетания]], [[Треугольник паскаля 2021-10-04|Треугольник паскаля]]
 - `Author:` 
 	- `Notable Authors:` 
-- `Keywords:` Сочетания, треугольник паскаля, бином ньютона
-- `Specific Subject:` Треугольник паскаля
-- `General Subject:` Алгебра
+- `Keywords:` [[Сочетания, треугольник паскаля]], [[Бином ньютона]]
+- `Specific Subject:` [[Треугольник паскаля]]
+- `General Subject:` [[Алгебра]]
 - `Reviewed Date:` [[2021-10-10]]
 
 
