--- a/Inbox/School/Math/Индукция 2021-10-10.md
+++ b/Inbox/School/Math/Индукция 2021-10-10.md
@@ -17,8 +17,8 @@ aliases:
 - `Author:` 
 	- `Notable Authors:` 
 - `Keywords:` Индукция, база индукции, доказательстиво, шаг индукции
-- `Specific Subject:` Доказательство 
-- `General Subject:` Алгебра
+- `Specific Subject:` [[Доказательство]] 
+- `General Subject:` [[Алгебра]]
 - `Reviewed Date:` [[2021-10-10]]
 
 
