--- a/Inbox/School/Math/Индукция и делимость 2021-10-15.md
+++ b/Inbox/School/Math/Индукция и делимость 2021-10-15.md
@@ -16,9 +16,9 @@ aliases:
 - `Links:` [[Индукция 2021-10-10|Индукция]]
 - `Author:` 
 	- `Notable Authors:` 
-- `Keywords:` Делимость, индукция
-- `Specific Subject:` Доказательство
-- `General Subject:` Алгебра
+- `Keywords:` [[Делимость]], [[Индукция]]
+- `Specific Subject:` [[Доказательство]]
+- `General Subject:` [[Алгебра]]
 - `Reviewed Date:` [[2021-10-15]]
 
 
