--- a/Inbox/School/Math/Проекции 2021-10-11.md
+++ b/Inbox/School/Math/Проекции 2021-10-11.md
@@ -16,9 +16,9 @@ aliases:
 - `Links:` [[Синус косинус 2021-10-07|Синус косинус]], [[Тангенс, катангенс 2021-10-07|Тангенс, катангенс]], [[Вектор 2021-10-11|Вектор]]
 - `Author:` 
 	- `Notable Authors:` 
-- `Keywords:` Проекция, оси кординат, кординатная плоскасть, синус, косинус, тангенс, катангенс, угол, вектор
-- `Specific Subject:` Проекции
-- `General Subject:` Геометрияф
+- `Keywords:` [[Проекция]], [[Оси кординат]], [[Кординатная плоскасть]], [[Синус]], [[Косинус]], [[Тангенс]], [[Катангенс]], [[Угол]], [[Вектор]]
+- `Specific Subject:` [[Проекции]]
+- `General Subject:` [[Геометрияф]]
 - `Reviewed Date:` [[2021-10-11]]
 
 
