--- a/Inbox/School/Math/Сочетания 2021-10-10.md
+++ b/Inbox/School/Math/Сочетания 2021-10-10.md
@@ -16,9 +16,9 @@ aliases:
 - `Links:` [[Сочетания 2021-10-10|Сочетания]], [[Перестановки 2021-10-10|Перестановки]], [[Треугольник паскаля 2021-10-04]]
 - `Author:` 
 	- `Notable Authors:` 
-- `Keywords:` Перестановки, места, комбинаторика, факториал, бином ньютона
-- `Specific Subject:` Сочетания
-- `General Subject:` Комбинаторика
+- `Keywords:` [[Перестановки]], [[Места]], [[Комбинаторика]], [[Факториал]], [[Бином ньютона]]
+- `Specific Subject:` [[Сочетания]]
+- `General Subject:` [[Комбинаторика]]
 - `Reviewed Date:` [[2021-10-10]]
 
 
