--- a/Inbox/School/Math/Тангенс, катангенс 2021-10-07.md
+++ b/Inbox/School/Math/Тангенс, катангенс 2021-10-07.md
@@ -16,9 +16,9 @@ aliases:
 - `Links:` [[Синус косинус 2021-10-07|Синус косинус]]
 - `Author:` 
 	- `Notable Authors:` 
-- `Keywords:` Синус, косинус, катет, прилежащий, противолежащий
-- `Specific Subject:` Тангенс, катангенс
-- `General Subject:` Тригонометрия
+- `Keywords:` [[Синус]], [[Косинус]], [[Катет]], [[Прилежащий]], [[Противолежащий]]
+- `Specific Subject:` [[Тангенс]], [[Катангенс]]
+- `General Subject:` [[Тригонометрия]]
 - `Reviewed Date:` [[2021-10-07]]
 
 
