--- a/Inbox/School/Math/Треугольник паскаля 2021-10-04.md
+++ b/Inbox/School/Math/Треугольник паскаля 2021-10-04.md
@@ -16,9 +16,9 @@ aliases:
 - `Links:` [[Сочетания 2021-10-10|Сочетания]]
 - `Author:` 
 	- `Notable Authors:` 
-- `Keywords:` Треугольник паскаля, сочетания, бином ньютона
-- `Specific Subject:` Треугольник паскаля
-- `General Subject:` Алгебра
+- `Keywords:` [[Треугольник паскаля]], [[Сочетания]], [[Бином ньютона]]
+- `Specific Subject:` [[Треугольник паскаля]]
+- `General Subject:` [[Алгебра]]
 - `Reviewed Date:` [[2021-10-04]]
 
 
