--- a/Inbox/School/Math/Устный счёт 2021-10-06.md
+++ b/Inbox/School/Math/Устный счёт 2021-10-06.md
@@ -16,9 +16,9 @@ aliases:
 - `Links:`
 - `Author:`
 	- `Notable Authors:` 
-- `Keywords:` Устный счёт, квадратные уровнения, дескрименант
-- `Specific Subject:` Квадратные уровнения
-- `General Subject:` Алгебра
+- `Keywords:` [[Устный счёт]], [[Квадратные уровнения]], [[Дескрименант]]
+- `Specific Subject:` [[Квадратные уровнения]]
+- `General Subject:` [[Алгебра]]
 - `Reviewed Date:` [[2021-10-06]]
 
 
