--- a/Outbox/Math language/Использование 2021-10-15 2021-10-15.md
+++ b/Outbox/Math language/Использование 2021-10-15 2021-10-15.md
@@ -16,9 +16,9 @@ aliases:
 - `Links:`
 - `Author:` https://www.math-linux.com/latex-26/faq/latex-faq/
     - `Notable Authors:` 
-- `Keywords:` 
-- `Specific Subject:` Математический плагин
-- `General Subject:` Obsidian
+- `Keywords:` [[Математика]], [[Заметки]], [[Формулы]]
+- `Specific Subject:` [[Математический плагин]]
+- `General Subject:` [[Obsidian]]
 - `Reviewed Date:` [[2021-10-15]]
 
 
