--- a/Outbox/Идеи.md
+++ b/Outbox/Идеи.md
@@ -1,5 +1,4 @@
-[ ] Теорема синусов
-[ ] Теорема косинусов
 [ ] Что такое искусство(хидден)
+[ ] Чуства/эмоции(филкек)
+[ ] Программирование советы
 [ ] Английский 2 темы
-[ ] Node js
