--- a/Inbox/Programming/Node js/Npm 2021-10-16.md
+++ b/Inbox/Programming/Node js/Npm 2021-10-16.md
@@ -16,9 +16,9 @@ aliases:
 - `Links:` [[Npx 2021-10-16|Утилита для запуска пакетов без установки]], [[PackageJson 2021-10-16|Файл управления завимсимостями packege.json]], [[Версии 2021-10-16|Версии пакетов npm]]
 - `Author:` 
 	- `Notable Authors:` 
-- `Keywords:` Пакетный менеджер, node js, веб разработка
-- `Specific Subject:` Утилиты
-- `General Subject:` Node js
+- `Keywords:` [[Пакетный менеджер]], [[Node js 2021-10-18]], [[Веб разработка]]
+- `Specific Subject:` [[Утилиты]]
+- `General Subject:` [[Node js 2021-10-18]]
 - `Reviewed Date:` [[2021-10-16]]
 
 
