--- a/Inbox/School/Math/Синус косинус 2021-10-07.md
+++ b/Inbox/School/Math/Синус косинус 2021-10-07.md
@@ -16,9 +16,9 @@ aliases:
 - `Links:` [[Тангенс, катангенс 2021-10-07|Тангенс, катангенс]]
 - `Author:` 
 	- `Notable Authors:` 
-- `Keywords:` Синус, косинус, катет, гипотенуза
-- `Specific Subject:` Синус, косинус
-- `General Subject:` Тригонометрия
+- `Keywords:` [[Синус]], [[Косинус]], [[Катет]], [[Гипотенуза]]
+- `Specific Subject:` [[Синус]], [[косинус]]
+- `General Subject:` [[Тригонометрия]]
 - `Reviewed Date:` [[2021-10-07]]
 
 
