--- a/Outbox/Math/Треугольник Паскаля формула нижнего ряда 2021-10-10.md
+++ b/Outbox/Math/Треугольник Паскаля формула нижнего ряда 2021-10-10.md
@@ -16,9 +16,9 @@ aliases:
 - `Links:` [[Треугольник паскаля 2021-10-04|Треугольник паскаля]], [[Сочетания 2021-10-10|Сочетания]]
 - `Author:` 
 	- `Notable Authors:` 
-- `Keywords:` Треугольник Паскаля, ряды, сочетания.
-- `Specific Subject:` Треугольник Паскаля
-- `General Subject:` Алгебра
+- `Keywords:` [[Треугольник Паскаля]], [[Ряды]], [[Сочетания]].
+- `Specific Subject:` [[Треугольник Паскаля]]
+- `General Subject:` [[Алгебра]]
 - `Reviewed Date:` [[2021-10-10]]
 
 
