--- a/Inbox/Programming/Node js/Npm 2021-10-16.md
+++ b/Inbox/Programming/Node js/Npm 2021-10-16.md
@@ -18,7 +18,7 @@ aliases:
 	- `Notable Authors:` 
 - `Keywords:` [[Пакетный менеджер]], [[Node js 2021-10-18]], [[Веб разработка]]
 - `Specific Subject:` [[Утилиты]]
-- `General Subject:` [[Node js 2021-10-18]]
+- `General Subject:` [[Node js 2021-10-18|Node js]]
 - `Reviewed Date:` [[2021-10-16]]
 
 
