--- a/Inbox/School/Math/Задача отношения треугольника паскаля и сочетаниями 2021-10-10.md
+++ b/Inbox/School/Math/Задача отношения треугольника паскаля и сочетаниями 2021-10-10.md
@@ -36,4 +36,4 @@ aliases:
 #### Решение
 Представим что количество ходов влево до следующего перекрёстка это k, а количество ходов вверх это t. Тогда всего ходов t + k. Количество спсобов пройти до точки будет равно распределению ходов вверх к примеру на некоторые ходы из t + k. Или распределение некоторых t + k ходов на t мест. А это и описывается формулой [[Сочетания 2021-10-10|сочетаний]].
 ![[Pasted image 20211010015838.png]]
-После вычисления путей мы получим как раз треугольник паскаля повёрнутый на -135 градусов.
+После вычисления путей мы получим как раз [[Треугольник паскаля 2021-10-04|треугольник паскаля]] повёрнутый на -135 градусов.
