--- a/Inbox/School/Math/Множества 2021-10-10.md
+++ b/Inbox/School/Math/Множества 2021-10-10.md
@@ -12,6 +12,8 @@ aliases:
 - `Links:` 
 - `Reviewed Date:` [[2021-10-10]]
 
+Множество это набор каких-то значений, которые не повторяются внутри множества, и также внутри множеств могум быть другие множества(подмножества).
+
 $$\mathbb{N} = {1, 2, 3, 4, 5, (...)}$$
 Множество натуральных чисел.
 $$\mathbb{Z} = {(...), -1, 0, 1, (...)}$$
