--- a/Inbox/School/Phisics/Инерциальная система отсчёта 2021-10-19.md
+++ b/Inbox/School/Phisics/Инерциальная система отсчёта 2021-10-19.md
@@ -9,7 +9,7 @@ aliases:
 
 # Title: **[[Инерциальная система отсчёта 2021-10-19]]**
 - `Type:` [[&]]
-- `Links:` [[Ускорение 2021-10-01|Ускорение]]
+- `Links:` [[Тангенциальное ускорение 2021-10-01|Ускорение]]
 - `Reviewed Date:` [[2021-10-19]]
 
-Инерциальная система отсчёта - система отсчёта в которой все тела движутся равномерно(без [[Ускорение 2021-10-01|yскорения]]) и прямолинейно или покоятся.
+Инерциальная система отсчёта - система отсчёта в которой все тела движутся равномерно(без [[Тангенциальное ускорение 2021-10-01|yскорения]]) и прямолинейно или покоятся.
