--- a/Inbox/School/Phisics/Перемещение 2021-10-01.md
+++ b/Inbox/School/Phisics/Перемещение 2021-10-01.md
@@ -16,9 +16,9 @@ aliases:
 - `Links:`
 - `Author:` 
 	- `Notable Authors:` 
-- `Keywords:` Перемещение, проекция, равноускоренное движение
-- `Specific Subject:` Перемещение
-- `General Subject:` Механика
+- `Keywords:` [[Перемещение]], [[Проекция]], [[Равноускоренное движение]]
+- `Specific Subject:` [[Перемещение]]
+- `General Subject:` [[Механика]]
 - `Reviewed Date:` [[2021-10-01]]
 
 
@@ -36,4 +36,4 @@ $$s = v_{ср} * t = \frac {v_{0x} + v_x}2 * t$$
 Перемещение
 
 $$s = v_{ср} * t = \frac {v_{0x} + v_{0x} + a_xt}2 * t = \frac {2v_{0x}t + a_xt^2}2 = V_{0X}t + \frac {a_xt^2}2$$
-[[Ускорение 2021-10-01#Выражение скорости зная ускорение|Конечная скорость]] выражается черех ускорение и время
+[[Тангенциальное ускорение 2021-10-01#Выражение скорости зная ускорение|Конечная скорость]] выражается черех ускорение и время
