--- a/Inbox/School/Phisics/Тангенциальное ускорение 2021-10-01.md
+++ b/Inbox/School/Phisics/Тангенциальное ускорение 2021-10-01.md
@@ -7,7 +7,7 @@ aliases:
 
 
 
-# Title: **[[Ускорение 2021-10-01]]**
+# Title: **[[Тангенциальное ускорение 2021-10-01]]**
 
 
 ## Metadata:
@@ -16,9 +16,9 @@ aliases:
 - `Links:` [[Перемещение 2021-10-01|Перемещение]]
 - `Author:` 
 	- `Notable Authors:` 
-- `Keywords:` Перемещение, проекция, равноускоренное движение
-- `Specific Subject:` Ускорение
-- `General Subject:` Механика
+- `Keywords:` [[Перемещение]], [[Проекция]], [[Равноускоренное движение]]
+- `Specific Subject:` [[Ускорение]]
+- `General Subject:` [[Механика]]
 - `Reviewed Date:` [[2021-10-01]]
 
 
@@ -26,11 +26,14 @@ aliases:
 
 ### Понятие
 $$\vec a = \frac {\vec v - \vec v_0}{t}$$
-Векторная физическая велечина, при равноускоренном движении равнгая изменению скорости к отношению времени.
+Векторная физическая велечина, при равноускоренном движении равная изменению скорости к отношению времени.
 
 ### Сокращение 
 $$\vec a = \frac {\vec v}{t}$$
 Если тело изначально покоилось то можно сократить уровнение
+
+#### Касательное движение по окружности
+$$\vec{a_t} = \frac{R \vec \omega}{t}$$
 
 ### Выражение скорости зная ускорение 
 $$v_x = v_{0x} + a_xt$$
