--- a/Inbox/Helth/Разминка при долгом сидении 2021-10-14.md
+++ b/Inbox/Helth/Разминка при долгом сидении 2021-10-14.md
@@ -12,6 +12,6 @@ aliases:
 - `Links:`
 - `Reviewed Date:` [[2021-10-14]]
 
-Каждый час делаемпо 5 минут одно из 2-ух упражнений:
-1) ложишься на спину и двигаешь ляшками из положения 90 градусов к корпусу. ![[Pasted image 20211014170507.png]]
-2) поднимание попы и ног вверх лежа на спине, руки лежат но полу, а ты катаешься спиной по полу. 
+Каждый час делаем по 5 минут одно из 2-ух упражнений:
+1) ложишься на спину и двигаешь нагами из положения 90 градусов к корпусу. ![[Pasted image 20211014170507.png]]
+2) поднимание зада и ног вверх лежа на спине, руки лежат но полу, а ты катаешься спиной по полу. 
