--- a/Inbox/Programming/Node js/Импортирование ES 2021-10-16.md
+++ b/Inbox/Programming/Node js/Импортирование ES 2021-10-16.md
@@ -18,9 +18,8 @@ aliases:
 	- `Notable Authors:` 
 - `Keywords:` [[JavaScript]], [[Модули]], [[Зависисмости]]
 - `Specific Subject:` [[Импортирование пакетов]]
-- `General Subject:` [[Веб разработка]]
+- `General Subject:` [[Node js 2021-10-18|Node js]]
 - `Reviewed Date:` [[2021-10-16]]
-
 
 ## Notes
 
