--- a/Inbox/Programming/Node js/Импортирование CommonJS 2021-10-18.md
+++ b/Inbox/Programming/Node js/Импортирование CommonJS 2021-10-18.md
@@ -1,4 +1,4 @@
----
+#проконтролировать процесс #проконтролировать процесс #проконтролировать процесс #проконтролировать процесс ---
 type: paper
 tags: 📥️/📜️ 🖥️
 aliases:
@@ -18,9 +18,8 @@ aliases:
 	- `Notable Authors:` 
 - `Keywords:` [[JavaScript]], [[Модули]], [[Зависисмости]]
 - `Specific Subject:` [[Импортирование пакетов]]
-- `General Subject:` [[Веб разработка]]
+- `General Subject:` [[Node js 2021-10-18|Node js]]
 - `Reviewed Date:` [[2021-10-18]]
-
 
 ## Notes
 
